Repeat character and invalid key notifications moved below word. Borders removed from Cards. Border radius removed from Cards. card-body height and width set to better keep uniform. Additional css added to card-body to center text. h5 given width of 20px to prevent shift when letter appears.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,3 +48,16 @@
 .alert {
     width: 100%;
 }
+
+.card-body {
+    height: 75px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+h5 {
+    width: 20px;
+}
